@@ -1,25 +1,8 @@
 package com.mshoes.mshoes.services.impl;
 
-import com.mshoes.mshoes.exception.ResourceNotFoundException;
-import com.mshoes.mshoes.libraries.Utilities;
-import com.mshoes.mshoes.mapper.ColorMapper;
-import com.mshoes.mshoes.mapper.ImageMapper;
-import com.mshoes.mshoes.mapper.ProductMapper;
-import com.mshoes.mshoes.mapper.SizeMapper;
-import com.mshoes.mshoes.models.Color;
-import com.mshoes.mshoes.models.Size;
-import com.mshoes.mshoes.models.dtos.ProductDTO;
-import com.mshoes.mshoes.models.requested.RequestedColor;
-import com.mshoes.mshoes.models.requested.RequestedImage;
-import com.mshoes.mshoes.models.requested.RequestedProduct;
-import com.mshoes.mshoes.models.Image;
-import com.mshoes.mshoes.models.Product;
-import com.mshoes.mshoes.models.requested.RequestedSize;
-import com.mshoes.mshoes.repositories.ColorRepository;
-import com.mshoes.mshoes.repositories.ImageRepository;
-import com.mshoes.mshoes.repositories.ProductRepository;
-import com.mshoes.mshoes.repositories.SizeRepository;
-import com.mshoes.mshoes.services.ProductService;
+import java.util.List;
+import java.util.Optional;
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
@@ -27,9 +10,26 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
+import com.mshoes.mshoes.exception.ResourceNotFoundException;
+import com.mshoes.mshoes.libraries.Utilities;
+import com.mshoes.mshoes.mapper.ColorMapper;
+import com.mshoes.mshoes.mapper.ImageMapper;
+import com.mshoes.mshoes.mapper.ProductMapper;
+import com.mshoes.mshoes.mapper.SizeMapper;
+import com.mshoes.mshoes.models.Color;
+import com.mshoes.mshoes.models.Image;
+import com.mshoes.mshoes.models.Product;
+import com.mshoes.mshoes.models.Size;
+import com.mshoes.mshoes.models.requested.ColorRequest;
+import com.mshoes.mshoes.models.requested.ImageRequest;
+import com.mshoes.mshoes.models.requested.ProductRequest;
+import com.mshoes.mshoes.models.requested.SizeRequest;
+import com.mshoes.mshoes.models.response.ProductResponse;
+import com.mshoes.mshoes.repositories.ColorRepository;
+import com.mshoes.mshoes.repositories.ImageRepository;
+import com.mshoes.mshoes.repositories.ProductRepository;
+import com.mshoes.mshoes.repositories.SizeRepository;
+import com.mshoes.mshoes.services.ProductService;
 
 @Service
 public class ProductServiceImpl implements ProductService {
@@ -61,7 +61,8 @@ public class ProductServiceImpl implements ProductService {
 	private final Utilities utilities;
 
 	public ProductServiceImpl(ProductRepository productRepository, ImageRepository imageRepository,
-							  ColorRepository colorRepository, SizeRepository sizeRepository, ProductMapper productMapper, ImageMapper imageMapper, ColorMapper colorMapper, SizeMapper sizeMapper, Utilities utilities) {
+			ColorRepository colorRepository, SizeRepository sizeRepository, ProductMapper productMapper,
+			ImageMapper imageMapper, ColorMapper colorMapper, SizeMapper sizeMapper, Utilities utilities) {
 		this.productRepository = productRepository;
 		this.imageRepository = imageRepository;
 		this.colorRepository = colorRepository;
@@ -73,27 +74,24 @@ public class ProductServiceImpl implements ProductService {
 		this.utilities = utilities;
 	}
 
-	private void saveColorsAndSizes(List<RequestedColor> requestedColors, long productId){
-		if (requestedColors != null) {
-			for (RequestedColor requestedColor : requestedColors){
-				requestedColor.setProductId(productId);
-				Color color = colorMapper.mapRequestedToModel(requestedColor);
+	private void saveColorsAndSizes(List<ColorRequest> colorRequests, long productId) {
+		if (colorRequests != null) {
+			for (ColorRequest colorRequest : colorRequests) {
+				colorRequest.setProductId(productId);
+				Color color = colorMapper.mapRequestedToModel(colorRequest);
 				color.setSizes(null);
 				Color newColor = colorRepository.save(color);
-				if(newColor != null){
-					long newColorId = newColor.getId();
-					if (newColorId == 0){
-						break;
-					}else {
-						List<RequestedSize> requestedSizes = requestedColor.getSizes().stream().collect(Collectors.toList());
-						for (RequestedSize requestedSize : requestedSizes){
-							requestedSize.setColorId(newColorId);
-							Size size = sizeMapper.mapRequestedToModel(requestedSize);
-							size.setSold(0);
-							sizeRepository.save(size);
-						}
+				long newColorId = newColor.getId();
+				if (newColorId == 0) {
+					break;
+				} else {
+					List<SizeRequest> sizeRequests = colorRequest.getSizes().stream().toList();
+					for (SizeRequest sizeRequest : sizeRequests) {
+						sizeRequest.setColorId(newColorId);
+						Size size = sizeMapper.mapRequestedToModel(sizeRequest);
+						size.setSold(0);
+						sizeRepository.save(size);
 					}
-
 				}
 
 			}
@@ -104,20 +102,21 @@ public class ProductServiceImpl implements ProductService {
 	private void saveImages(List<String> imageUrls, long productId) {
 		if (imageUrls != null) {
 			for (String imageUrl : imageUrls) {
-				RequestedImage requestedImage = new RequestedImage();
-				requestedImage.setUrl(imageUrl);
-				requestedImage.setProductId(productId);
+				ImageRequest imageRequest = new ImageRequest();
+				imageRequest.setUrl(imageUrl);
+				imageRequest.setProductId(productId);
 
-				Image image = imageMapper.mapRequestedToModel(requestedImage);
+				Image image = imageMapper.mapRequestedToModel(imageRequest);
 
 				imageRepository.save(image);
 			}
 		}
 	}
-	@Override
-	public ProductDTO createProduct(RequestedProduct requestedProduct) {
 
-		Product product = productMapper.mapRequestedToModel(requestedProduct);
+	@Override
+	public ProductResponse createProduct(ProductRequest productRequest) {
+
+		Product product = productMapper.mapRequestedToModel(productRequest);
 
 		// set current date
 		product.setCreatedDate(utilities.getCurrentDate());
@@ -133,55 +132,45 @@ public class ProductServiceImpl implements ProductService {
 		// Get id of product create recently
 		long productId = newProduct.getId();
 
-		List<RequestedColor> requestedColors = requestedProduct.getColors();
-		this.saveColorsAndSizes(requestedColors,productId);
+		List<ColorRequest> colorRequests = productRequest.getColors();
+		this.saveColorsAndSizes(colorRequests, productId);
 
 		// Save image into table image
-		List<String> imageUrls = requestedProduct.getImageUrls();
+		List<String> imageUrls = productRequest.getImageUrls();
 		saveImages(imageUrls, productId);
-
 
 		return this.getProductById(productId);
 	}
 
-	//Save color and size into database
-
+	// Save color and size into database
 
 	/**
 	 * Lấy danh sách tất cả sản phẩm, phân trang theo
-	 * @param pageNumber
-	 * @param pageSize
-	 * @return
 	 */
 	@Override
-	public Page<ProductDTO> getAllProducts(int pageNumber, int pageSize, String sortBy) {
+	public Page<ProductResponse> getAllProducts(int pageNumber, int pageSize, String sortBy) {
 		Pageable pageable = PageRequest.of(pageNumber, pageSize, Sort.by(sortBy).ascending());
 		Page<Product> products = productRepository.findAll(pageable);
-		Page<ProductDTO> productDTOS = products.map(product -> productMapper.mapModelToDTO(product));
-		return productDTOS;
+		return products.map(productMapper::toProductResponse);
 	}
 
 	/**
 	 * Lấy danh sách sản phẩm theo mã danh mục
-	 * @param categoryId
-	 * @return
-	 *
-	 * */
+	 */
 	@Override
-	public Page<ProductDTO> getProductsByCategoryId(long categoryId, int pageNumber, int pageSize, String sortBy) {
+	public Page<ProductResponse> getProductsByCategoryId(long categoryId, int pageNumber, int pageSize, String sortBy) {
 		Pageable pageable = PageRequest.of(pageNumber, pageSize, Sort.by(sortBy).ascending());
-		Page<Product> products = productRepository.findByCategoryId(categoryId,pageable);
-		Page<ProductDTO> productDTOS = products.map(product -> productMapper.mapModelToDTO(product));
-		return productDTOS;
+		Page<Product> products = productRepository.findByCategoryId(categoryId, pageable);
+		return products.map(productMapper::toProductResponse);
 	}
 
 	@Override
-	public Optional<List<ProductDTO>> searchProducts(String search) {
+	public Optional<List<ProductResponse>> searchProducts(String search) {
 		List<Product> products = productRepository.searchProducts(search);
 
 		if (!products.isEmpty()) {
-			List<ProductDTO> productDTOS = productMapper.mapModelToDTOs(products);
-			return Optional.of(productDTOS);
+			List<ProductResponse> productResponses = productMapper.mapModelsToResponses(products);
+			return Optional.of(productResponses);
 		} else {
 			return Optional.empty();
 		}
@@ -189,30 +178,27 @@ public class ProductServiceImpl implements ProductService {
 
 	/**
 	 * Lấy thông tin một sản phẩm theo product_id
-	 * @param productId
-	 * @return
 	 */
 	@Override
-	public ProductDTO getProductById(long productId) {
+	public ProductResponse getProductById(long productId) {
 		productRepository.incrementVisitedById(productId);
 		Product product = productRepository.findById(productId)
 				.orElseThrow(() -> new ResourceNotFoundException("Product", "id", productId));
-		return productMapper.mapModelToDTO(product);
+		return productMapper.toProductResponse(product);
 	}
 
-
 	@Override
-	public ProductDTO updateProduct(RequestedProduct requestedProduct, long productId) {
+	public ProductResponse updateProduct(ProductRequest productRequest, long productId) {
 		// get product by id from the database
 		Product product = productRepository.findById(productId)
 				.orElseThrow(() -> new ResourceNotFoundException("Product", "id", productId));
 
-		productMapper.updateModel(product, requestedProduct);
+		productMapper.updateModel(product, productRequest);
 		product.setModifiedDate(utilities.getCurrentDate());
 
 		Product responseProduct = productRepository.save(product);
 
-		return productMapper.mapModelToDTO(responseProduct);
+		return productMapper.toProductResponse(responseProduct);
 	}
 
 	@Override
@@ -220,7 +206,6 @@ public class ProductServiceImpl implements ProductService {
 		// get product by id from the database
 		Product product = productRepository.findById(productId)
 				.orElseThrow(() -> new ResourceNotFoundException("Product", "id", productId));
-
 		try {
 			productRepository.delete(product);
 		} catch (Exception e) {
